<resources>
    <string name="app_name">CarX</string>
    <string name="rx">rx</string>
    <string name="read_buffer">Read Buffer</string>
    <string name="status">Status</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="bluetooth_on">Bluetooth On</string>
    <string name="bluetooth_off">Bluetooth Off</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="forward">Forward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="back">Back</string>
    <string name="stop">Stop</string>
    <string name="speedSeek">speedSeek</string>
    <string name="turnSeek">turnSeek</string>
    <string name="xleft">XL</string>
    <string name="xright">XR</string>
    <string name="go">GO</string>
</resources>
