<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colesluggett.rc_app.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/rx"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/read_buffer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetoothStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/bluetooth_status" />
        </LinearLayout>

        <Button
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_on" />

        <Button
            android:id="@+id/off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_off" />

        <Button
            android:id="@+id/PairedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices" />

        <Button
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices" />

        <ListView
            android:id="@+id/devicesListView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:choiceMode="singleChoice" />

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:translationX="150dp"
            android:translationY="50dp" />

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:translationX="50dp"
            android:translationY="60dp" />

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:translationX="250dp"
            android:translationY="10dp" />

        <Button
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:translationX="150dp"
            android:translationY="30dp" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:background="#0000ff"
            android:translationX="150dp"
            android:translationY="-80dp"/>

    </LinearLayout>

</RelativeLayout>
    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<android.support.v7.widget.LinearLayoutCompat-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".MainActivity"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->


    <!--<Button-->
    <!--android:id="@+id/OnBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Bluetooth On"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/discover"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Discover devices"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/disconnectBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Disconnect"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/OffBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Off"-->
    <!--/>-->
    <!--<ListView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/devicesListView"-->
    <!--android:choiceMode="singleChoice"-->
    <!--android:layout_below="@+id/PairedBtn"-->
    <!--android:layout_alignRight="@+id/off"-->
    <!--android:layout_alignEnd="@+id/off" />-->

    <!--</android.support.v7.widget.LinearLayoutCompat>-->

    <!--<Button-->
    <!--android:id="@+id/startCar"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:scaleX="1.7"-->
    <!--android:scaleY="1.7"-->
    <!--android:text="@string/start_car"-->
    <!--android:textStyle="bold" />-->